# seo-ai-models

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FIXES.md  Modelfile  Modelfile-32b-opt  README-Phase5.md  README.md  README.production.md  SETUP_AND_USAGE.md  add_load_schema.py  add_methods_proper.py  add_methods_simple.py  add_onboarding_methods.py  add_onboarding_methods_fixed.py  add_set_base_types.py  add_simple_methods.py  add_update_project_status_fixed.py  advisor_original.txt  alembic.ini  calibrated_rank_predictor.py  calibrated_weights_results.json  clean_tests.sh  create_clean_schema_optimizer.py  create_new_file.py  data_collector.py  data_generator.py  debug_eeat_ranking.py  demo_eeat_integration.py  demo_enhanced_parsing.py  demo_spa_parser.py  docker-compose.yml  download_artifacts.sh  eeat_debug.py  eeat_model.joblib  eeat_report.md  (+95 more)
alembic/: README  env.py
examples/: config_import_test.py  content_improvement_test.py  core_components_test.py  enhanced_seo_demo.py  improved_components_demo.py  seo_advisor_test.py  suggester_examples.py  suggester_test_scenarios.py
frontend/: README.md  index.html  package.json
hybrid_models/: eeat_hybrid_model_results.json
legal-ai-bot/: README_FIX.md  bot.py  config.py  handlers.py  requirements.txt
notebooks/: dim_reducer_examples.ipynb
old_tests_backup/: test_content_analyzer.py  test_dim_reducer_full.py  test_dim_reducer_monitoring.py  test_dim_reducer_trainer.py  test_imports.py  test_rank_predictor.py  test_seo_features_extractor.py  test_suggester.py
real_eeat_data/: eeat_data_20250330-100410.csv  eeat_data_20250330-100410.json
seo_ai_models/: __init__.py  analyze.py  demo_consistency_checker.py  demo_enhanced_analyzer.py  demo_js_processing.py  demo_llm_enhanced_advisor.py  demo_llm_integration.py  demo_local_optimizations.py  demo_parsing.py  demo_phase5.py  demo_predictors_recommenders.py  demo_serp_analysis.py  demo_simple_parsing.py  demo_spa_parser.py  demo_spa_parsing.py  demo_tiered_advisor.py  demo_tiered_scheduling.py  generate_recommendations.py  integrate_enhanced_parser.py  run_phase5_tests.py  setup_environment.py  test_enhanced_advisor.py  test_enhanced_parser.py  test_integration_simple.py  test_micro_components.py  (+3 more)
(+432 files in other folders)
